--- a/client/style/app.css
+++ b/client/style/app.css
@@ -38,24 +38,24 @@ input{
 .m-i, x, i:not(notearea i){font-family:'Material Icons';font-weight:normal;font-style:normal;font-size:24px;display:inline-block;line-height:1;text-transform:none;letter-spacing:normal;word-wrap:normal;white-space:nowrap;direction:ltr;-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility;-moz-osx-font-smoothing:grayscale;font-feature-settings:'liga'}
 
 ::-webkit-scrollbar {
-    width: 15px
+    width: 12px
 }
 
 ::-webkit-scrollbar-track {
-    background-color: initial
+    background: rgb(229, 215, 215, .9);
 }
 
 ::-webkit-scrollbar-thumb {
-    /* border-radius: 8px; */
-    background-color: #444
+    border-radius: 8px;
+    background-color: #999
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background-color: #4b4b4b
+    background-color: #888
 }
 
 ::-webkit-scrollbar-thumb:active {
-    background-color: #5a5a5a
+    background-color: #666
 }
 
 ::-webkit-scrollbar-corner { background: #1a1a1a; }
